--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,16 @@ body {
   background-color: #0f172a;
   color: #f1f5f9;
 }
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.marquee {
+  animation: marquee 21s linear infinite;
+}
